# tkzs_config_service

./: .gitignore  CODE_REVIEW_2026-04-24.md  README.md  TODO_FIX_2026-04-21.md  _version.py  build-server.ps1  pyproject.toml
.github/workflows/: main.yml  tag-on-merge.yml
case/: client_api_ergonomics_case.py  deactivate_re_register_case.py  private_key_priority_case.py  simple_case.py
doc/: build_code.json  build_code.txt
docs/: configuration-priority.md
done_todo/: TODO.md  TODO_2026-04-23_client_config_and_key_priority.md  TODO_2026-04-23_private_key_dir_priority.md  TODO_2026-04-24_client_api_ergonomics.md  TODO_2026-04-24_code_review_and_doc_fix.md  TODO_2026-04-24_code_review_fixes.md
service/: auth.go  crypto.go  database.go  go.mod  go.sum  handlers.go  main.go
src/tkzs_config_service_client/: __init__.py  api.py  auth.py  client.py  config.py  crypto.py
tests/: test_client_api_ergonomics_2026_04_24.py  test_client_config_runtime_and_key_priority.py  test_del_re_register_behaver.py  test_import.py
