
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "tkzs-config-service-client"
version = "0.4.0"
description = "tkzs config service client,get config or env from Configuration Center"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.7",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "PyJWT>=2.10.1",
    "bcrypt>=4.3.0",
]
[tool.hatch.build]
src = "src"  # 必须放这里！

[tool.hatch.build.targets.wheel]
packages = ["src/tkzs_config_service_client"]


exclude = [
  "service/",
  "tests/",
  "examples/",
  "docs/",
  "scripts/",
  "*.pyc",
  "__pycache__/",
  "tkzs-config-service",
  "TODO*.md",
  "temp/",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

# [[tool.uv.index]]
# name = "pypi"
# url = "https://pypi.org/simple/"
# publish-url = "https://upload.pypi.org/legacy/"  # 👈 正式上传地址