
[build-system]
requires = ["hatchling", "hatch-vcs"]         # 1. 添加插件
build-backend = "hatchling.build"
[project]
name = "tkzs-config-service-client"
dynamic = ["version"]   # 2. 动态版本好
description = "tkzs config service client,get config or env from Configuration Center"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.7",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "PyJWT>=2.10.1",
    "bcrypt>=4.3.0",
]
[tool.hatch.build]
src = "src"  # 必须放这里！

[tool.hatch.build.targets.wheel]
packages = ["src/tkzs_config_service_client"]

[tool.hatch.version] # 设置版本号来源
source = "vcs"    
[tool.hatch.version.raw-options]
#version_scheme = "no-guess-dev"               # 在非 release 标签时，不增加开发版本号
local_scheme = "no-local-version"    

[tool.hatch.build.hooks.vcs] 
version-file = "_version.py"

exclude = [
  "service/",
  "tests/",
  "examples/",
  "docs/",
  "scripts/",
  "*.pyc",
  "__pycache__/",
  "tkzs-config-service",
  "TODO*.md",
  "temp/",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

# [[tool.uv.index]]
# name = "pypi"
# url = "https://pypi.org/simple/"
# publish-url = "https://upload.pypi.org/legacy/"  # 👈 正式上传地址